--- a/src/res/layout/picker_activity.xml
+++ b/src/res/layout/picker_activity.xml
@@ -49,18 +49,12 @@
         app:layout_constraintBottom_toBottomOf="@id/image_crop_view"
         app:layout_constraintRight_toRightOf="@id/image_crop_view" />
 
-    <ImageView
-        android:id="@+id/rotate_button"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:padding="8dp"
-        android:layout_margin="16dp"
-        android:layout_gravity="right|bottom"
-        android:background="@drawable/black_circle"
-        android:scaleType="centerInside"
-        android:src="@drawable/rotate"
-        app:layout_constraintBottom_toBottomOf="@id/image_crop_view"
-        app:layout_constraintLeft_toRightOf="@id/snap_button" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="#000000"
+        app:layout_constraintTop_toBottomOf="@id/image_crop_view"
+        app:layout_constraintBottom_toTopOf="@id/gallery_grid_view" />
 
     <com.fumi.imagePicker.ImagePickerGridView
         android:id="@+id/gallery_grid_view"
